--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                                 <a class="dropdown-item" href="#Pilares">Pilares</a>
                                 <a class="dropdown-item" href="#Industria">Industria</a>
                                 <a class="dropdown-item" href="#Tech">Tecnología</a>
-                                <a class="dropdown-item" href="#clientes">Clientes</a>
+                                <a class="dropdown-item" href="#clientes">Casos de Éxito</a>
                                 <a class="dropdown-item" href="#Equipo">Equipo</a>
                             </div>
                         </li>
@@ -410,7 +410,6 @@
             <div class="row">
                 <div class="col-lg-5 wow fadeInLeft" data-wow-duration="2.5s">
                     <div class="section-title">
-                        <span>DICIO</span>
                         <h1 class="h1sm">Tecnología que facilita las <span>interacciones</span> entre empresa y personas. </h1>
                         <p class="texti textism">Nuestros procesos cumplen con el artículo 51 de la Circular Única Bancaria
                         y
