--- a/_pgbackup/Notice_1627937107.html
+++ b/_pgbackup/Notice_1627937107.html
@@ -41,22 +41,50 @@
         <!-- Document Wrapper ============================================= -->
         <div id="wrapper" class="wrapper clearfix">
             <!-- Heade  ============================================= -->
-            <nav class="navbar navbar-expand-lg fixed-top">
-                <div class="container">
-                    <a class="navbar-brand" href="index.html"> <img src="images/web/SVG/logo.svg" alt="logo" width="153"></a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav ml-auto">
-                            <li class="nav-item">
-                                <a class="nav-link" href="#contact">Contacto</a>
-                            </li>
-                        </ul>
+            <header id="navbar-spy" class="header header-1 header-transparent header-bordered header-fixed">
+                <nav id="primary-menu" class="navbar navbar-fixed-top">
+                    <div class="container">
+                        <div class="navbar-header">
+                            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
+                                <span class="sr-only">Toggle navigation</span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                            </button>
+                            <a class="logo" href="index.html"> </a>
+                        </div>
+                        <div class="collapse navbar-collapse pull-right" id="navbar-collapse-1">
+                            <ul class="nav navbar-nav nav-pos-right navbar-left nav-split">
+</ul>
+                        </div>
+                        <!--/.nav-collapse -->
+                    </div>
+                </nav>
+            </header>
+            <!-- Slider #1============================================= -->
+            <section id="slider" class=" sectionslider ">
+                <div class="class_term">
+                    <div class="container_terms">
+                        <div class="row">
+                            <div class="col-xs-12 col-sm-12 col-md-12">
+                                <div class="slide--logo mt-100 hidden-xs wow fadeInUp" data-wow-duration="1s">
+                                    <div class="row">
+                                        <img src="images/logo.png" alt="logo hero" class="logo_head logo_head_new" width="150">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="NEW_PADDING_MOBILE fadeInUp new_padding_head pt-100 wow" data-wow-duration="1s">
+                                <div class="slide--bio text-left">
+                                    <h2 class="newt">AVISO DE<br>PRIVACIDAD</h2>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- .row end -->
                     </div>
                 </div>
-            </nav>
-            <!-- Slider #1============================================= -->
+            </section>
             <!-- .container end -->
             <!-- .slide-item end -->
             <!-- #slider end -->
@@ -161,7 +189,7 @@
                         <a href="index.html">Inicio</a>
                     </li>
                     <li class="footer2 footersm ">
-                        <a href="index.html">Productos</a>
+                        <a href="#features3">Productos</a>
                     </li>
                     <li class="footer2 footersm ">
                         <a href="Notice.html" target="_blank">Aviso de privacidad</a>
